PMT/S2 after pulse implemented

--- a/pax/config/Simulation_Qing.ini
+++ b/pax/config/Simulation_Qing.ini
@@ -12,250 +12,265 @@ samples_to_store_after  =             50                  # Observation?? Some c
 special_thresholds =                  {'1': 100, '2': 100}   # Erik's observation, see #273
 
 [WaveformSimulator]
+n_fold_generation_after_pulse = 4
+# s2 after pulses:
+# grid, lxe, cathode impurities
+# the probability following XENON100 single electron paper:
+# http://iopscience.iop.org/article/10.1088/0954-3899/41/3/035201/pdf
+# however assuming grid/cathode after pulses are one order of magnitude less probable than the lxe after pulses
+after_pulse_probabilities=[0.05, 0.05, 0.05] # for test
+#after_pulse_probabilities=[4.3*(10**(-5)), 4.3*(10**(-4)), 4.3*(10**(-5))]
+after_pulse_time_delay_types=['gauss', 'expo', 'gauss']
+after_pulse_time_delay_params1=[2000, 245700, 182000]
+after_pulse_time_delay_params2=[200, 18000, 18200] # 10% time variation
+
+
+
+
 pmt_after_pulse_probabilities = [
    [0, 0, 0, 0], # fake one 
-   [0.002,0.023,0.003,0.001], # pmt1
-   [0.002,0.023,0.003,0.001], # pmt2
-   [0.002,0.023,0.003,0.001], # pmt3
-   [0.002,0.023,0.003,0.001], # pmt4
-   [0.002,0.023,0.003,0.001], # pmt5
-   [0.002,0.023,0.003,0.001], # pmt6
-   [0.002,0.023,0.003,0.001], # pmt7
-   [0.002,0.023,0.003,0.001], # pmt8
-   [0.002,0.023,0.003,0.001], # pmt9
-   [0.002,0.023,0.003,0.001], # pmt10
-   [0.002,0.023,0.003,0.001], # pmt11
-   [0.002,0.023,0.003,0.001], # pmt12
-   [0.002,0.023,0.003,0.001], # pmt13
-   [0.002,0.023,0.003,0.001], # pmt14
-   [0.002,0.023,0.003,0.001], # pmt15
-   [0.002,0.023,0.003,0.001], # pmt16
-   [0.002,0.023,0.003,0.001], # pmt17
-   [0.002,0.023,0.003,0.001], # pmt18
-   [0.002,0.023,0.003,0.001], # pmt19
-   [0.002,0.023,0.003,0.001], # pmt20
-   [0.002,0.023,0.003,0.001], # pmt21
-   [0.002,0.023,0.003,0.001], # pmt22
-   [0.002,0.023,0.003,0.001], # pmt23
-   [0.002,0.023,0.003,0.001], # pmt24
-   [0.002,0.023,0.003,0.001], # pmt25
-   [0.002,0.023,0.003,0.001], # pmt26
-   [0.002,0.023,0.003,0.001], # pmt27
-   [0.002,0.023,0.003,0.001], # pmt28
-   [0.002,0.023,0.003,0.001], # pmt29
-   [0.002,0.023,0.003,0.001], # pmt30
-   [0.002,0.023,0.003,0.001], # pmt31
-   [0.002,0.023,0.003,0.001], # pmt32
-   [0.002,0.023,0.003,0.001], # pmt33
-   [0.002,0.023,0.003,0.001], # pmt34
-   [0.002,0.023,0.003,0.001], # pmt35
-   [0.002,0.023,0.003,0.001], # pmt36
-   [0.002,0.023,0.003,0.001], # pmt37
-   [0.002,0.023,0.003,0.001], # pmt38
-   [0.002,0.023,0.003,0.001], # pmt39
-   [0.002,0.023,0.003,0.001], # pmt40
-   [0.002,0.023,0.003,0.001], # pmt41
-   [0.002,0.023,0.003,0.001], # pmt42
-   [0.002,0.023,0.003,0.001], # pmt43
-   [0.002,0.023,0.003,0.001], # pmt44
-   [0.002,0.023,0.003,0.001], # pmt45
-   [0.002,0.023,0.003,0.001], # pmt46
-   [0.002,0.023,0.003,0.001], # pmt47
-   [0.002,0.023,0.003,0.001], # pmt48
-   [0.002,0.023,0.003,0.001], # pmt49
-   [0.002,0.023,0.003,0.001], # pmt50
-   [0.002,0.023,0.003,0.001], # pmt51
-   [0.002,0.023,0.003,0.001], # pmt52
-   [0.002,0.023,0.003,0.001], # pmt53
-   [0.002,0.023,0.003,0.001], # pmt54
-   [0.002,0.023,0.003,0.001], # pmt55
-   [0.002,0.023,0.003,0.001], # pmt56
-   [0.002,0.023,0.003,0.001], # pmt57
-   [0.002,0.023,0.003,0.001], # pmt58
-   [0.002,0.023,0.003,0.001], # pmt59
-   [0.002,0.023,0.003,0.001], # pmt60
-   [0.002,0.023,0.003,0.001], # pmt61
-   [0.002,0.023,0.003,0.001], # pmt62
-   [0.002,0.023,0.003,0.001], # pmt63
-   [0.002,0.023,0.003,0.001], # pmt64
-   [0.002,0.023,0.003,0.001], # pmt65
-   [0.002,0.023,0.003,0.001], # pmt66
-   [0.002,0.023,0.003,0.001], # pmt67
-   [0.002,0.023,0.003,0.001], # pmt68
-   [0.002,0.023,0.003,0.001], # pmt69
-   [0.002,0.023,0.003,0.001], # pmt70
-   [0.002,0.023,0.003,0.001], # pmt71
-   [0.002,0.023,0.003,0.001], # pmt72
-   [0.002,0.023,0.003,0.001], # pmt73
-   [0.002,0.023,0.003,0.001], # pmt74
-   [0.002,0.023,0.003,0.001], # pmt75
-   [0.002,0.023,0.003,0.001], # pmt76
-   [0.002,0.023,0.003,0.001], # pmt77
-   [0.002,0.023,0.003,0.001], # pmt78
-   [0.002,0.023,0.003,0.001], # pmt79
-   [0.002,0.023,0.003,0.001], # pmt80
-   [0.002,0.023,0.003,0.001], # pmt81
-   [0.002,0.023,0.003,0.001], # pmt82
-   [0.002,0.023,0.003,0.001], # pmt83
-   [0.002,0.023,0.003,0.001], # pmt84
-   [0.002,0.023,0.003,0.001], # pmt85
-   [0.002,0.023,0.003,0.001], # pmt86
-   [0.002,0.023,0.003,0.001], # pmt87
-   [0.002,0.023,0.003,0.001], # pmt88
-   [0.002,0.023,0.003,0.001], # pmt89
-   [0.002,0.023,0.003,0.001], # pmt90
-   [0.002,0.023,0.003,0.001], # pmt91
-   [0.002,0.023,0.003,0.001], # pmt92
-   [0.002,0.023,0.003,0.001], # pmt93
-   [0.002,0.023,0.003,0.001], # pmt94
-   [0.002,0.023,0.003,0.001], # pmt95
-   [0.002,0.023,0.003,0.001], # pmt96
-   [0.002,0.023,0.003,0.001], # pmt97
-   [0.002,0.023,0.003,0.001], # pmt98
-   [0.002,0.023,0.003,0.001], # pmt99
-   [0.002,0.023,0.003,0.001], # pmt100
-   [0.002,0.023,0.003,0.001], # pmt101
-   [0.002,0.023,0.003,0.001], # pmt102
-   [0.002,0.023,0.003,0.001], # pmt103
-   [0.002,0.023,0.003,0.001], # pmt104
-   [0.002,0.023,0.003,0.001], # pmt105
-   [0.002,0.023,0.003,0.001], # pmt106
-   [0.002,0.023,0.003,0.001], # pmt107
-   [0.002,0.023,0.003,0.001], # pmt108
-   [0.002,0.023,0.003,0.001], # pmt109
-   [0.002,0.023,0.003,0.001], # pmt110
-   [0.002,0.023,0.003,0.001], # pmt111
-   [0.002,0.023,0.003,0.001], # pmt112
-   [0.002,0.023,0.003,0.001], # pmt113
-   [0.002,0.023,0.003,0.001], # pmt114
-   [0.002,0.023,0.003,0.001], # pmt115
-   [0.002,0.023,0.003,0.001], # pmt116
-   [0.002,0.023,0.003,0.001], # pmt117
-   [0.002,0.023,0.003,0.001], # pmt118
-   [0.002,0.023,0.003,0.001], # pmt119
-   [0.002,0.023,0.003,0.001], # pmt120
-   [0.002,0.023,0.003,0.001], # pmt121
-   [0.002,0.023,0.003,0.001], # pmt122
-   [0.002,0.023,0.003,0.001], # pmt123
-   [0.002,0.023,0.003,0.001], # pmt124
-   [0.002,0.023,0.003,0.001], # pmt125
-   [0.002,0.023,0.003,0.001], # pmt126
-   [0.002,0.023,0.003,0.001], # pmt127
-   [0.002,0.023,0.003,0.001], # pmt128
-   [0.002,0.023,0.003,0.001], # pmt129
-   [0.002,0.023,0.003,0.001], # pmt130
-   [0.002,0.023,0.003,0.001], # pmt131
-   [0.002,0.023,0.003,0.001], # pmt132
-   [0.002,0.023,0.003,0.001], # pmt133
-   [0.002,0.023,0.003,0.001], # pmt134
-   [0.002,0.023,0.003,0.001], # pmt135
-   [0.002,0.023,0.003,0.001], # pmt136
-   [0.002,0.023,0.003,0.001], # pmt137
-   [0.002,0.023,0.003,0.001], # pmt138
-   [0.002,0.023,0.003,0.001], # pmt139
-   [0.002,0.023,0.003,0.001], # pmt140
-   [0.002,0.023,0.003,0.001], # pmt141
-   [0.002,0.023,0.003,0.001], # pmt142
-   [0.002,0.023,0.003,0.001], # pmt143
-   [0.002,0.023,0.003,0.001], # pmt144
-   [0.002,0.023,0.003,0.001], # pmt145
-   [0.002,0.023,0.003,0.001], # pmt146
-   [0.002,0.023,0.003,0.001], # pmt147
-   [0.002,0.023,0.003,0.001], # pmt148
-   [0.002,0.023,0.003,0.001], # pmt149
-   [0.002,0.023,0.003,0.001], # pmt150
-   [0.002,0.023,0.003,0.001], # pmt151
-   [0.002,0.023,0.003,0.001], # pmt152
-   [0.002,0.023,0.003,0.001], # pmt153
-   [0.002,0.023,0.003,0.001], # pmt154
-   [0.002,0.023,0.003,0.001], # pmt155
-   [0.002,0.023,0.003,0.001], # pmt156
-   [0.002,0.023,0.003,0.001], # pmt157
-   [0.002,0.023,0.003,0.001], # pmt158
-   [0.002,0.023,0.003,0.001], # pmt159
-   [0.002,0.023,0.003,0.001], # pmt160
-   [0.002,0.023,0.003,0.001], # pmt161
-   [0.002,0.023,0.003,0.001], # pmt162
-   [0.002,0.023,0.003,0.001], # pmt163
-   [0.002,0.023,0.003,0.001], # pmt164
-   [0.002,0.023,0.003,0.001], # pmt165
-   [0.002,0.023,0.003,0.001], # pmt166
-   [0.002,0.023,0.003,0.001], # pmt167
-   [0.002,0.023,0.003,0.001], # pmt168
-   [0.002,0.023,0.003,0.001], # pmt169
-   [0.002,0.023,0.003,0.001], # pmt170
-   [0.002,0.023,0.003,0.001], # pmt171
-   [0.002,0.023,0.003,0.001], # pmt172
-   [0.002,0.023,0.003,0.001], # pmt173
-   [0.002,0.023,0.003,0.001], # pmt174
-   [0.002,0.023,0.003,0.001], # pmt175
-   [0.002,0.023,0.003,0.001], # pmt176
-   [0.002,0.023,0.003,0.001], # pmt177
-   [0.002,0.023,0.003,0.001], # pmt178
-   [0.002,0.023,0.003,0.001], # pmt179
-   [0.002,0.023,0.003,0.001], # pmt180
-   [0.002,0.023,0.003,0.001], # pmt181
-   [0.002,0.023,0.003,0.001], # pmt182
-   [0.002,0.023,0.003,0.001], # pmt183
-   [0.002,0.023,0.003,0.001], # pmt184
-   [0.002,0.023,0.003,0.001], # pmt185
-   [0.002,0.023,0.003,0.001], # pmt186
-   [0.002,0.023,0.003,0.001], # pmt187
-   [0.002,0.023,0.003,0.001], # pmt188
-   [0.002,0.023,0.003,0.001], # pmt189
-   [0.002,0.023,0.003,0.001], # pmt190
-   [0.002,0.023,0.003,0.001], # pmt191
-   [0.002,0.023,0.003,0.001], # pmt192
-   [0.002,0.023,0.003,0.001], # pmt193
-   [0.002,0.023,0.003,0.001], # pmt194
-   [0.002,0.023,0.003,0.001], # pmt195
-   [0.002,0.023,0.003,0.001], # pmt196
-   [0.002,0.023,0.003,0.001], # pmt197
-   [0.002,0.023,0.003,0.001], # pmt198
-   [0.002,0.023,0.003,0.001], # pmt199
-   [0.002,0.023,0.003,0.001], # pmt200
-   [0.002,0.023,0.003,0.001], # pmt201
-   [0.002,0.023,0.003,0.001], # pmt202
-   [0.002,0.023,0.003,0.001], # pmt203
-   [0.002,0.023,0.003,0.001], # pmt204
-   [0.002,0.023,0.003,0.001], # pmt205
-   [0.002,0.023,0.003,0.001], # pmt206
-   [0.002,0.023,0.003,0.001], # pmt207
-   [0.002,0.023,0.003,0.001], # pmt208
-   [0.002,0.023,0.003,0.001], # pmt209
-   [0.002,0.023,0.003,0.001], # pmt210
-   [0.002,0.023,0.003,0.001], # pmt211
-   [0.002,0.023,0.003,0.001], # pmt212
-   [0.002,0.023,0.003,0.001], # pmt213
-   [0.002,0.023,0.003,0.001], # pmt214
-   [0.002,0.023,0.003,0.001], # pmt215
-   [0.002,0.023,0.003,0.001], # pmt216
-   [0.002,0.023,0.003,0.001], # pmt217
-   [0.002,0.023,0.003,0.001], # pmt218
-   [0.002,0.023,0.003,0.001], # pmt219
-   [0.002,0.023,0.003,0.001], # pmt220
-   [0.002,0.023,0.003,0.001], # pmt221
-   [0.002,0.023,0.003,0.001], # pmt222
-   [0.002,0.023,0.003,0.001], # pmt223
-   [0.002,0.023,0.003,0.001], # pmt224
-   [0.002,0.023,0.003,0.001], # pmt225
-   [0.002,0.023,0.003,0.001], # pmt226
-   [0.002,0.023,0.003,0.001], # pmt227
-   [0.002,0.023,0.003,0.001], # pmt228
-   [0.002,0.023,0.003,0.001], # pmt229
-   [0.002,0.023,0.003,0.001], # pmt230
-   [0.002,0.023,0.003,0.001], # pmt231
-   [0.002,0.023,0.003,0.001], # pmt232
-   [0.002,0.023,0.003,0.001], # pmt233
-   [0.002,0.023,0.003,0.001], # pmt234
-   [0.002,0.023,0.003,0.001], # pmt235
-   [0.002,0.023,0.003,0.001], # pmt236
-   [0.002,0.023,0.003,0.001], # pmt237
-   [0.002,0.023,0.003,0.001], # pmt238
-   [0.002,0.023,0.003,0.001], # pmt239
-   [0.002,0.023,0.003,0.001], # pmt240
-   [0.002,0.023,0.003,0.001], # pmt241
-   [0.002,0.023,0.003,0.001] # pmt242
+   [0.1,0.1,0.1,0.1], # pmt1
+   [0.1,0.1,0.1,0.1], # pmt2
+   [0.1,0.1,0.1,0.1], # pmt3
+   [0.1,0.1,0.1,0.1], # pmt4
+   [0.1,0.1,0.1,0.1], # pmt5
+   [0.1,0.1,0.1,0.1], # pmt6
+   [0.1,0.1,0.1,0.1], # pmt7
+   [0.1,0.1,0.1,0.1], # pmt8
+   [0.1,0.1,0.1,0.1], # pmt9
+   [0.1,0.1,0.1,0.1], # pmt10
+   [0.1,0.1,0.1,0.1], # pmt11
+   [0.1,0.1,0.1,0.1], # pmt12
+   [0.1,0.1,0.1,0.1], # pmt13
+   [0.1,0.1,0.1,0.1], # pmt14
+   [0.1,0.1,0.1,0.1], # pmt15
+   [0.1,0.1,0.1,0.1], # pmt16
+   [0.1,0.1,0.1,0.1], # pmt17
+   [0.1,0.1,0.1,0.1], # pmt18
+   [0.1,0.1,0.1,0.1], # pmt19
+   [0.1,0.1,0.1,0.1], # pmt20
+   [0.1,0.1,0.1,0.1], # pmt21
+   [0.1,0.1,0.1,0.1], # pmt22
+   [0.1,0.1,0.1,0.1], # pmt23
+   [0.1,0.1,0.1,0.1], # pmt24
+   [0.1,0.1,0.1,0.1], # pmt25
+   [0.1,0.1,0.1,0.1], # pmt26
+   [0.1,0.1,0.1,0.1], # pmt27
+   [0.1,0.1,0.1,0.1], # pmt28
+   [0.1,0.1,0.1,0.1], # pmt29
+   [0.1,0.1,0.1,0.1], # pmt30
+   [0.1,0.1,0.1,0.1], # pmt31
+   [0.1,0.1,0.1,0.1], # pmt32
+   [0.1,0.1,0.1,0.1], # pmt33
+   [0.1,0.1,0.1,0.1], # pmt34
+   [0.1,0.1,0.1,0.1], # pmt35
+   [0.1,0.1,0.1,0.1], # pmt36
+   [0.1,0.1,0.1,0.1], # pmt37
+   [0.1,0.1,0.1,0.1], # pmt38
+   [0.1,0.1,0.1,0.1], # pmt39
+   [0.1,0.1,0.1,0.1], # pmt40
+   [0.1,0.1,0.1,0.1], # pmt41
+   [0.1,0.1,0.1,0.1], # pmt42
+   [0.1,0.1,0.1,0.1], # pmt43
+   [0.1,0.1,0.1,0.1], # pmt44
+   [0.1,0.1,0.1,0.1], # pmt45
+   [0.1,0.1,0.1,0.1], # pmt46
+   [0.1,0.1,0.1,0.1], # pmt47
+   [0.1,0.1,0.1,0.1], # pmt48
+   [0.1,0.1,0.1,0.1], # pmt49
+   [0.1,0.1,0.1,0.1], # pmt50
+   [0.1,0.1,0.1,0.1], # pmt51
+   [0.1,0.1,0.1,0.1], # pmt52
+   [0.1,0.1,0.1,0.1], # pmt53
+   [0.1,0.1,0.1,0.1], # pmt54
+   [0.1,0.1,0.1,0.1], # pmt55
+   [0.1,0.1,0.1,0.1], # pmt56
+   [0.1,0.1,0.1,0.1], # pmt57
+   [0.1,0.1,0.1,0.1], # pmt58
+   [0.1,0.1,0.1,0.1], # pmt59
+   [0.1,0.1,0.1,0.1], # pmt60
+   [0.1,0.1,0.1,0.1], # pmt61
+   [0.1,0.1,0.1,0.1], # pmt62
+   [0.1,0.1,0.1,0.1], # pmt63
+   [0.1,0.1,0.1,0.1], # pmt64
+   [0.1,0.1,0.1,0.1], # pmt65
+   [0.1,0.1,0.1,0.1], # pmt66
+   [0.1,0.1,0.1,0.1], # pmt67
+   [0.1,0.1,0.1,0.1], # pmt68
+   [0.1,0.1,0.1,0.1], # pmt69
+   [0.1,0.1,0.1,0.1], # pmt70
+   [0.1,0.1,0.1,0.1], # pmt71
+   [0.1,0.1,0.1,0.1], # pmt72
+   [0.1,0.1,0.1,0.1], # pmt73
+   [0.1,0.1,0.1,0.1], # pmt74
+   [0.1,0.1,0.1,0.1], # pmt75
+   [0.1,0.1,0.1,0.1], # pmt76
+   [0.1,0.1,0.1,0.1], # pmt77
+   [0.1,0.1,0.1,0.1], # pmt78
+   [0.1,0.1,0.1,0.1], # pmt79
+   [0.1,0.1,0.1,0.1], # pmt80
+   [0.1,0.1,0.1,0.1], # pmt81
+   [0.1,0.1,0.1,0.1], # pmt82
+   [0.1,0.1,0.1,0.1], # pmt83
+   [0.1,0.1,0.1,0.1], # pmt84
+   [0.1,0.1,0.1,0.1], # pmt85
+   [0.1,0.1,0.1,0.1], # pmt86
+   [0.1,0.1,0.1,0.1], # pmt87
+   [0.1,0.1,0.1,0.1], # pmt88
+   [0.1,0.1,0.1,0.1], # pmt89
+   [0.1,0.1,0.1,0.1], # pmt90
+   [0.1,0.1,0.1,0.1], # pmt91
+   [0.1,0.1,0.1,0.1], # pmt92
+   [0.1,0.1,0.1,0.1], # pmt93
+   [0.1,0.1,0.1,0.1], # pmt94
+   [0.1,0.1,0.1,0.1], # pmt95
+   [0.1,0.1,0.1,0.1], # pmt96
+   [0.1,0.1,0.1,0.1], # pmt97
+   [0.1,0.1,0.1,0.1], # pmt98
+   [0.1,0.1,0.1,0.1], # pmt99
+   [0.1,0.1,0.1,0.1], # pmt100
+   [0.1,0.1,0.1,0.1], # pmt101
+   [0.1,0.1,0.1,0.1], # pmt102
+   [0.1,0.1,0.1,0.1], # pmt103
+   [0.1,0.1,0.1,0.1], # pmt104
+   [0.1,0.1,0.1,0.1], # pmt105
+   [0.1,0.1,0.1,0.1], # pmt106
+   [0.1,0.1,0.1,0.1], # pmt107
+   [0.1,0.1,0.1,0.1], # pmt108
+   [0.1,0.1,0.1,0.1], # pmt109
+   [0.1,0.1,0.1,0.1], # pmt110
+   [0.1,0.1,0.1,0.1], # pmt111
+   [0.1,0.1,0.1,0.1], # pmt112
+   [0.1,0.1,0.1,0.1], # pmt113
+   [0.1,0.1,0.1,0.1], # pmt114
+   [0.1,0.1,0.1,0.1], # pmt115
+   [0.1,0.1,0.1,0.1], # pmt116
+   [0.1,0.1,0.1,0.1], # pmt117
+   [0.1,0.1,0.1,0.1], # pmt118
+   [0.1,0.1,0.1,0.1], # pmt119
+   [0.1,0.1,0.1,0.1], # pmt120
+   [0.1,0.1,0.1,0.1], # pmt121
+   [0.1,0.1,0.1,0.1], # pmt122
+   [0.1,0.1,0.1,0.1], # pmt123
+   [0.1,0.1,0.1,0.1], # pmt124
+   [0.1,0.1,0.1,0.1], # pmt125
+   [0.1,0.1,0.1,0.1], # pmt126
+   [0.1,0.1,0.1,0.1], # pmt127
+   [0.1,0.1,0.1,0.1], # pmt128
+   [0.1,0.1,0.1,0.1], # pmt129
+   [0.1,0.1,0.1,0.1], # pmt130
+   [0.1,0.1,0.1,0.1], # pmt131
+   [0.1,0.1,0.1,0.1], # pmt132
+   [0.1,0.1,0.1,0.1], # pmt133
+   [0.1,0.1,0.1,0.1], # pmt134
+   [0.1,0.1,0.1,0.1], # pmt135
+   [0.1,0.1,0.1,0.1], # pmt136
+   [0.1,0.1,0.1,0.1], # pmt137
+   [0.1,0.1,0.1,0.1], # pmt138
+   [0.1,0.1,0.1,0.1], # pmt139
+   [0.1,0.1,0.1,0.1], # pmt140
+   [0.1,0.1,0.1,0.1], # pmt141
+   [0.1,0.1,0.1,0.1], # pmt142
+   [0.1,0.1,0.1,0.1], # pmt143
+   [0.1,0.1,0.1,0.1], # pmt144
+   [0.1,0.1,0.1,0.1], # pmt145
+   [0.1,0.1,0.1,0.1], # pmt146
+   [0.1,0.1,0.1,0.1], # pmt147
+   [0.1,0.1,0.1,0.1], # pmt148
+   [0.1,0.1,0.1,0.1], # pmt149
+   [0.1,0.1,0.1,0.1], # pmt150
+   [0.1,0.1,0.1,0.1], # pmt151
+   [0.1,0.1,0.1,0.1], # pmt152
+   [0.1,0.1,0.1,0.1], # pmt153
+   [0.1,0.1,0.1,0.1], # pmt154
+   [0.1,0.1,0.1,0.1], # pmt155
+   [0.1,0.1,0.1,0.1], # pmt156
+   [0.1,0.1,0.1,0.1], # pmt157
+   [0.1,0.1,0.1,0.1], # pmt158
+   [0.1,0.1,0.1,0.1], # pmt159
+   [0.1,0.1,0.1,0.1], # pmt160
+   [0.1,0.1,0.1,0.1], # pmt161
+   [0.1,0.1,0.1,0.1], # pmt162
+   [0.1,0.1,0.1,0.1], # pmt163
+   [0.1,0.1,0.1,0.1], # pmt164
+   [0.1,0.1,0.1,0.1], # pmt165
+   [0.1,0.1,0.1,0.1], # pmt166
+   [0.1,0.1,0.1,0.1], # pmt167
+   [0.1,0.1,0.1,0.1], # pmt168
+   [0.1,0.1,0.1,0.1], # pmt169
+   [0.1,0.1,0.1,0.1], # pmt170
+   [0.1,0.1,0.1,0.1], # pmt171
+   [0.1,0.1,0.1,0.1], # pmt172
+   [0.1,0.1,0.1,0.1], # pmt173
+   [0.1,0.1,0.1,0.1], # pmt174
+   [0.1,0.1,0.1,0.1], # pmt175
+   [0.1,0.1,0.1,0.1], # pmt176
+   [0.1,0.1,0.1,0.1], # pmt177
+   [0.1,0.1,0.1,0.1], # pmt178
+   [0.1,0.1,0.1,0.1], # pmt179
+   [0.1,0.1,0.1,0.1], # pmt180
+   [0.1,0.1,0.1,0.1], # pmt181
+   [0.1,0.1,0.1,0.1], # pmt182
+   [0.1,0.1,0.1,0.1], # pmt183
+   [0.1,0.1,0.1,0.1], # pmt184
+   [0.1,0.1,0.1,0.1], # pmt185
+   [0.1,0.1,0.1,0.1], # pmt186
+   [0.1,0.1,0.1,0.1], # pmt187
+   [0.1,0.1,0.1,0.1], # pmt188
+   [0.1,0.1,0.1,0.1], # pmt189
+   [0.1,0.1,0.1,0.1], # pmt190
+   [0.1,0.1,0.1,0.1], # pmt191
+   [0.1,0.1,0.1,0.1], # pmt192
+   [0.1,0.1,0.1,0.1], # pmt193
+   [0.1,0.1,0.1,0.1], # pmt194
+   [0.1,0.1,0.1,0.1], # pmt195
+   [0.1,0.1,0.1,0.1], # pmt196
+   [0.1,0.1,0.1,0.1], # pmt197
+   [0.1,0.1,0.1,0.1], # pmt198
+   [0.1,0.1,0.1,0.1], # pmt199
+   [0.1,0.1,0.1,0.1], # pmt200
+   [0.1,0.1,0.1,0.1], # pmt201
+   [0.1,0.1,0.1,0.1], # pmt202
+   [0.1,0.1,0.1,0.1], # pmt203
+   [0.1,0.1,0.1,0.1], # pmt204
+   [0.1,0.1,0.1,0.1], # pmt205
+   [0.1,0.1,0.1,0.1], # pmt206
+   [0.1,0.1,0.1,0.1], # pmt207
+   [0.1,0.1,0.1,0.1], # pmt208
+   [0.1,0.1,0.1,0.1], # pmt209
+   [0.1,0.1,0.1,0.1], # pmt210
+   [0.1,0.1,0.1,0.1], # pmt211
+   [0.1,0.1,0.1,0.1], # pmt212
+   [0.1,0.1,0.1,0.1], # pmt213
+   [0.1,0.1,0.1,0.1], # pmt214
+   [0.1,0.1,0.1,0.1], # pmt215
+   [0.1,0.1,0.1,0.1], # pmt216
+   [0.1,0.1,0.1,0.1], # pmt217
+   [0.1,0.1,0.1,0.1], # pmt218
+   [0.1,0.1,0.1,0.1], # pmt219
+   [0.1,0.1,0.1,0.1], # pmt220
+   [0.1,0.1,0.1,0.1], # pmt221
+   [0.1,0.1,0.1,0.1], # pmt222
+   [0.1,0.1,0.1,0.1], # pmt223
+   [0.1,0.1,0.1,0.1], # pmt224
+   [0.1,0.1,0.1,0.1], # pmt225
+   [0.1,0.1,0.1,0.1], # pmt226
+   [0.1,0.1,0.1,0.1], # pmt227
+   [0.1,0.1,0.1,0.1], # pmt228
+   [0.1,0.1,0.1,0.1], # pmt229
+   [0.1,0.1,0.1,0.1], # pmt230
+   [0.1,0.1,0.1,0.1], # pmt231
+   [0.1,0.1,0.1,0.1], # pmt232
+   [0.1,0.1,0.1,0.1], # pmt233
+   [0.1,0.1,0.1,0.1], # pmt234
+   [0.1,0.1,0.1,0.1], # pmt235
+   [0.1,0.1,0.1,0.1], # pmt236
+   [0.1,0.1,0.1,0.1], # pmt237
+   [0.1,0.1,0.1,0.1], # pmt238
+   [0.1,0.1,0.1,0.1], # pmt239
+   [0.1,0.1,0.1,0.1], # pmt240
+   [0.1,0.1,0.1,0.1], # pmt241
+   [0.1,0.1,0.1,0.1] # pmt242
  ]
 
 
