--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -48,7 +48,7 @@ compute_properties = [
 # Intentionally last, so reclassification takes least work
 pre_analysis = [
                 # Classify the clusters based on the properties
-                 'ClassifyPeaks_gastpcms.AdHocClassification',
+               'ClassifyPeaks.AdHocClassification',
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
@@ -64,7 +64,7 @@ tpc_name = "MuensterTPC"
 
 
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
-trigger_time_in_event = 256 * ns    # Check settings in caen1724.par
+trigger_time_in_event = 2560 * ns    # Check settings in caen1724.par
 
 pmt_0_is_fake = False      # TODO
 
