--- a/examples/muenster/MuensterTPC_new.ini
+++ b/examples/muenster/MuensterTPC_new.ini
@@ -32,7 +32,7 @@ dsp = [
             # Compute sum-waveform and hit-dependent properties for each peak
             'BasicProperties.BasicProperties',
             'BasicProperties.SumWaveformProperties',
-            'BasicProperties.CountCoincidentNoisePulses'
+      # 'BasicProperties.CountCoincidentNoisePulses'
         ]
 
 # Compute peak properties: can be redone from processed data file
@@ -57,7 +57,7 @@ pre_analysis = [
 #                'BuildInteractions.BasicInteractionProperties',
                ]
 
-output = 'Table.TableWriter'
+#output = 'Table.TableWriter'
 
 [DEFAULT]
 tpc_name = "MuensterTPC"
@@ -132,9 +132,9 @@ waveforms_to_plot = (
 [HitFinder.FindHits]
 make_diagnostic_plots = "never"
 # Compute baseline on first n samples in pulse:
-initial_baseline_samples = 26   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
+initial_baseline_samples = 20   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
 height_over_noise_high_threshold = 8
-height_over_noise_low_threshold = 1
+height_over_noise_low_threshold = 2
 
 [Cluster]
 # Suspicious channel rejection settings
@@ -163,13 +163,58 @@ max_difference = 2 * ns
 # see [note tbd]
 max_gap_size_in_cluster = 10 * ns
 
+[RejectNoiseHits]
+# Suspicious channel rejection settings
+penalty_per_noise_pulse = 0                 # "pe" equivalent penalty
+penalty_per_lone_hit = 1                    # "pe" equivalent penalty
+
+# Threshold to mark a suspicious channel
+penalty_geq_this_is_suspicious = 3          # "pe" equivalent penalty
+
+# Very dodgy channels start with a base penalty to make them always suspicious
+# This means they will contribute only if non-suspicious channels in the same detector show > 3pe area
+# Dodgy channels selected using run 10 noisy AmBe (120402_2000)
+base_penalties = {
+                 }
 
 
-
-#[Table.TableWriter]
+[Table.TableWriter]
 #output_format = 'hdf5_pandas'      # hdf5, csv, numpy, html, json, root, hdf5_pandas
 # Don't leave out hits and pulses -- that's what we're after!
-fields_to_ignore = ['raw data',
-                    'channel_waveforms',
+fields_to_ignore = ['sum_waveforms',
+                   'channel_waveforms',
+                   'all_hits',
+                   'raw_data',
+                   #'hits',
+                   'pulses',
+                   'detector',
+                   'n_reconstructed_positions',
+                   'reconstructed_positions_start',
+                   'area_fraction_top',
+                   'area_midpoint',
+                   'area_per_channel',
+                   'birthing_split_fraction',
+                   'birthing_split_goodness',
+                   'bottom_hitpattern_spread',
+                   'hit_time_mean',
+                   'hit_time_std',
+                   'hits_fraction_top',
+                   'interior_split_fraction',
+                   'interior_split_goodness',
+                   'left',
+                   'lone_hit_channel',
+                   'mean_amplitude_to_noise',
+                   'n_hits',
+                   'n_noise_pulses',
+                   'n_saturated_channels',
+                   'n_saturated_per_channel',
+                   'n_saturated_samples',
+                   'range_area_decile',
+                   'right',
                    'sum_waveform',
+                   'sum_waveform_top',
+                   'top_hitpattern_spread',
                    ]
+
+[WaveformSimulator]
+s2_patterns_file = None
