--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -48,7 +48,7 @@ compute_properties = [
 # Intentionally last, so reclassification takes least work
 pre_analysis = [
                 # Classify the clusters based on the properties
-               'ClassifyPeaks.AdHocClassification',
+               # 'ClassifyPeaks.AdHocClassification',
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
@@ -131,9 +131,9 @@ waveforms_to_plot = (
 [HitFinder.FindHits]
 make_diagnostic_plots = "never"
 # Compute baseline on first n samples in pulse:
-initial_baseline_samples = 20   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
-height_over_noise_high_threshold = 8
-height_over_noise_low_threshold = 2
+initial_baseline_samples = 40   # When using ZLE this must not be higher than 2x zle_nlbk as the peaks will be counted in otherwise
+height_over_noise_high_threshold = 3
+height_over_noise_low_threshold = 1
 
 [Cluster]
 # Suspicious channel rejection settings
@@ -185,7 +185,7 @@ fields_to_ignore = ['sum_waveforms',
                    'all_hits',
                    'raw_data',
                    #'hits',
-                   'pulses',
+                   #'pulses',
                    'detector',
                    'n_reconstructed_positions',
                    'reconstructed_positions_start',
@@ -203,7 +203,7 @@ fields_to_ignore = ['sum_waveforms',
                    'left',
                    'lone_hit_channel',
                    'mean_amplitude_to_noise',
-                   'n_hits',
+                   #'n_hits',
                    'n_noise_pulses',
                    'n_saturated_channels',
                    'n_saturated_per_channel',
