--- a/examples/muenster/MSTPC_GainCal.ini
+++ b/examples/muenster/MSTPC_GainCal.ini
@@ -109,9 +109,10 @@ pmt_locations = [
 
 
 # These gains are placeholder for gain calibration
-gains = [2e6] * 14
+gains = [1] * 14
 
-gain_sigmas = [1e6] * 14
+gain_sigmas = [0.5] * 14
+
 
 
 
