--- a/examples/muenster/MSTPC_GainCal.ini
+++ b/examples/muenster/MSTPC_GainCal.ini
@@ -113,6 +113,22 @@ gains = [1] * 14
 
 gain_sigmas = [0.5] * 14
 
+[EVE_file.EveInput]
+Channel_to_PMT_mapping =
+{0 : 0,
+1 : 1,
+2 : 2,
+3 : 3,
+4 : 4,
+5 : 5,
+6 : 6,
+7 : 7,
+8 : 8,
+9 : 9,
+10 : 10,
+11 : 11,
+12 : 12,
+14 : 13}
 
 
 
@@ -179,7 +195,7 @@ fields_to_ignore = ['sum_waveforms',
                    'raw_data',
                    'hits',
                    #'peaks',
-                   'pulses',
+                   #'pulses',
                    'detector',
                    'n_reconstructed_positions',
                    'reconstructed_positions_start',
