--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -22,7 +22,7 @@ dsp = [
              'HitFinder.FindHits',
             # Combine hits into rough clusters = peaks
             'BuildPeaks.GapSizeClustering',
-      'NaturalBreaksClustering.NaturalBreaksClustering',
+            'NaturalBreaksClustering.NaturalBreaksClustering',
 
             # Reject hits in noisy channels
             'RejectNoiseHits.RejectNoiseHits',
@@ -108,54 +108,54 @@ pmt_locations = [
 
 # These gains and sigmas were measured by Julian Blanke in Aug 2015 with a green LED at room temperature
 gains =
-[1933697.8898879532,
-2040993.801280048,
-1648429.608764316,
-1695712.1695569626,
-1867581.7131556319,
-1063521.2834296187,
-1436529.4422199193,
-1705343.6091864032,
-1454183.5124643894,
-2556372.6348743411,
-1536447.7707129428,
-1371231.1980239719,
-2411667.8200152558,
-1956849.7869552621]
+    [1933697.8898879532,
+    2040993.801280048,
+    1648429.608764316,
+    1695712.1695569626,
+    1867581.7131556319,
+    1063521.2834296187,
+    1436529.4422199193,
+    1705343.6091864032,
+    1454183.5124643894,
+    2556372.6348743411,
+    1536447.7707129428,
+    1371231.1980239719,
+    2411667.8200152558,
+    1956849.7869552621]
 
 gain_sigmas =
-[844404.61156072281,
-1000493.1376968586,
-773903.5124939417,
-869682.80508030532,
-1177516.8145831069,
-743249.10846546385,
-567183.86686080915,
-592916.6042938208,
-529734.67001317884,
-933798.66141649301,
-689292.48405461817,
-579671.2795924386,
-920884.42196935089,
-905597.73698767403]
+    [844404.61156072281,
+    1000493.1376968586,
+    773903.5124939417,
+    869682.80508030532,
+    1177516.8145831069,
+    743249.10846546385,
+    567183.86686080915,
+    592916.6042938208,
+    529734.67001317884,
+    933798.66141649301,
+    689292.48405461817,
+    579671.2795924386,
+    920884.42196935089,
+    905597.73698767403]
 
 
 [EVE_file.EveInput]
 Channel_to_PMT_mapping =
-{0 : 0,
-1 : 1,
-2 : 2,
-3 : 3,
-4 : 4,
-5 : 5,
-6 : 6,
-7 : 7,
-8 : 8,
-9 : 9,
-10 : 10,
-11 : 11,
-12 : 12,
-14 : 13}
+    {0 : 0,
+    1 : 1,
+    2 : 2,
+    3 : 3,
+    4 : 4,
+    5 : 5,
+    6 : 6,
+    7 : 7,
+    8 : 8,
+    9 : 9,
+    10 : 10,
+    11 : 11,
+    12 : 12,
+    14 : 13}
 
 
 [Plotting]
@@ -220,7 +220,7 @@ fields_to_ignore = ['sum_waveforms',
                    #'all_hits',
                    'raw_data',
                    'hits',
-                   #'pulses',
+                   'pulses',
                    'detector',
                    'n_reconstructed_positions',
                    'reconstructed_positions_start',
