--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -37,7 +37,7 @@ dsp = [
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
                         'WeightedSum.PosRecWeightedSum',
-#                        'MaxPMT.PosRecMaxPMT',
+                        'MaxPMT.PosRecMaxPMT',
 #                        'RobustWeightedMean.PosRecRobustWeightedMean',
 #                        'NeuralNet.PosRecNeuralNet',
 #                        'ChiSquareGamma.PosRecChiSquareGamma',
@@ -52,7 +52,7 @@ pre_analysis = [
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
-                # 'BuildInteractions.BuildInteractions',
+                 'BuildInteractions.BuildInteractions',
 #                'BuildInteractions.BasicInteractionProperties',
                ]
 pre_output = []
@@ -64,7 +64,7 @@ tpc_name = "MuensterTPC"
 
 
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
-trigger_time_in_event = 2560 * ns    # Check settings in caen1724.par
+trigger_time_in_event = 72000 * ns    # Check settings in caen1724.par
 
 pmt_0_is_fake = False      # TODO
 
@@ -200,6 +200,31 @@ cluster_all = True
 
 [Cluster.HitDifference]
 max_difference = 2 * ns
+
+[BuildInteractions.BuildInteractions]
+# Pair S1s and S2s in order of size, but no more than these:
+pair_n_s2s = 5
+pair_n_s1s = 3
+
+# Never pair S2s smaller than:
+s2_pairing_threshold = 70  # pe
+
+# Preference in algorithms to use for the xy reconstructed position
+xy_posrec_preference = ['PosRecWeightedSum', 'PosRecMaxPMT']
+
+
+[BuildInteractions.BasicInteractionProperties]
+# Add 'zombie PMTS' here (only effective if active_saturation_and_zombie_correction = True)
+# These are PMTs who have died, but the loss of light yield has not yet been accounted for in the overall S1 or S2
+# light yield map. These PMTs will be treated just like saturated PMTs: when computing the corrected area,
+# the observed area in the zombie channels (which will be 0) is replaced by the expected area based on the other PMTs.
+# DO NOT keep PMTs here after the light yield maps have been fixed!!!
+# If you don't understand why, stop modifying the file and just fix the light yield map!
+zombie_pmts_s1 = []
+# S2 zombie PMTs will only work on the top, as we have no S2(x,y,pmt) patterns for the bottom array.
+# For now, all dead top PMTs are included for the S2, since we don't have the S2(x, y) light yield in pax yet...
+zombie_pmts_s2 = []
+
 
 [NaturalBreaksClustering]
 # Points in log10(peak_area), goodness_of_split. Split threshold is linearly interpolated between these.
