--- a/examples/muenster/MSTPC_2phase_Cs137.ini
+++ b/examples/muenster/MSTPC_2phase_Cs137.ini
@@ -31,14 +31,14 @@ dsp = [
 
             # Compute sum-waveform and hit-dependent properties for each peak
             'BasicProperties.BasicProperties',
-            'BasicProperties.SumWaveformProperties',
+            #'BasicProperties.SumWaveformProperties',
             # 'BasicProperties.CountCoincidentNoisePulses'
         ]
 
 # Compute peak properties: can be redone from processed data file
 compute_properties = [
                         'WeightedSum.PosRecWeightedSum',
-#                        'MaxPMT.PosRecMaxPMT',
+                        'MaxPMT.PosRecMaxPMT',
 #                        'RobustWeightedMean.PosRecRobustWeightedMean',
 #                        'NeuralNet.PosRecNeuralNet',
 #                        'ChiSquareGamma.PosRecChiSquareGamma',
@@ -53,8 +53,8 @@ pre_analysis = [
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
-                # 'BuildInteractions.BuildInteractions',
-                # 'BuildInteractions.BasicInteractionProperties',
+                'BuildInteractions.BuildInteractions',
+                #'BuildInteractions.BasicInteractionProperties',
                ]
 pre_output = []
 #output = 'Table.TableWriter'
@@ -151,6 +151,30 @@ min_gap_size_for_break = 10 * ns
 # see [note tbd]
 max_gap_size_in_cluster = 20 * ns
 
+[BuildInteractions.BuildInteractions]
+# Pair S1s and S2s in order of size, but no more than these:
+pair_n_s2s = 5
+pair_n_s1s = 3
+
+# Never pair S2s smaller than:
+s2_pairing_threshold = 70  # pe
+
+# Preference in algorithms to use for the xy reconstructed position
+xy_posrec_preference = ['PosRecWeightedSum', 'PosRecMaxPMT']
+
+
+[BuildInteractions.BasicInteractionProperties]
+# Add 'zombie PMTS' here (only effective if active_saturation_and_zombie_correction = True)
+# These are PMTs who have died, but the loss of light yield has not yet been accounted for in the overall S1 or S2
+# light yield map. These PMTs will be treated just like saturated PMTs: when computing the corrected area,
+# the observed area in the zombie channels (which will be 0) is replaced by the expected area based on the other PMTs.
+# DO NOT keep PMTs here after the light yield maps have been fixed!!!
+# If you don't understand why, stop modifying the file and just fix the light yield map!
+zombie_pmts_s1 = []
+# S2 zombie PMTs will only work on the top, as we have no S2(x,y,pmt) patterns for the bottom array.
+# For now, all dead top PMTs are included for the S2, since we don't have the S2(x, y) light yield in pax yet...
+zombie_pmts_s2 = []
+
 
 
 [Table.TableWriter]
@@ -181,7 +205,7 @@ fields_to_ignore = ['sum_waveforms',
                    'mean_amplitude_to_noise',
                    #'n_hits',
                    'n_noise_pulses',
-                   'n_saturated_channels',
+                   #'n_saturated_channels',
                    'n_saturated_per_channel',
                    'n_saturated_samples',
                    'range_area_decile',
