Filter to fight power supply noise during commissioning

--- a/pax/config/XENON1T_LED.ini
+++ b/pax/config/XENON1T_LED.ini
@@ -4,15 +4,26 @@ parent_configuration = 'XENON1T'
 # Stop after the hitfinder - everything else is meaningless/counterproductive
 dsp = [#'CheckPulses.CheckBounds',   # Temporarily disabled, see #315
        'HitFinder.FindHits',
+       'SumWaveform.SumWaveform',
       ]
 compute_properties = []
 pre_analysis = []
 pre_output = []
 
+
+[HitFinder.FindHits]
 # Don't make event plots -- they wont work
 # If you want to see what's going on, instead use e.g.
-# [HitFinder.FindHits]
 # make_diagnostic_plots = 'always'
+
+
+# Filter coefficients (IIR, fed to scipy.signal.filtfilt) for filter to apply
+# If you don't want to filter, comment out / remove these options
+
+# 7Mhz high-pass filter to cut out what is believed to be power supply noise around 2MHz
+# signal.butter(4, 7e6/sampling_rate_Hz, btype='high')
+filter_numerator = [ 0.74975426, -2.99901703,  4.49852555, -2.99901703,  0.74975426]
+filter_denominator = [ 1.        , -3.42589476,  4.43679365, -2.57124826,  0.56213146]
 
 
 [DEFAULT]
