update gains and trigger time

--- a/examples/muenster/MSTPC_2phase_Cs137.ini
+++ b/examples/muenster/MSTPC_2phase_Cs137.ini
@@ -53,8 +53,8 @@ pre_analysis = [
 
                 # Combine S1 and S2 into pairs = interactions and compute properties
                 # which depend on S1 AND S2 specific information (i.e. z-corrections)
-                'BuildInteractions.BuildInteractions',
-                #'BuildInteractions.BasicInteractionProperties',
+                #'BuildInteractions.BuildInteractions',
+               # 'BuildInteractions.BasicInteractionProperties',
                ]
 pre_output = []
 #output = 'Table.TableWriter'
@@ -65,7 +65,7 @@ tpc_name = "MuensterTPC"
 
 
 # Time in the event at which trigger occurs. Set to None or leave out if there is no trigger
-trigger_time_in_event = 2560 * ns    # Check settings in caen1724.par
+trigger_time_in_event = 72000 * ns    # Check settings in caen1724.par
 
 
 
