update gains and trigger time

--- a/examples/muenster/MSTPC_2phase_Cs137.ini
+++ b/examples/muenster/MSTPC_2phase_Cs137.ini
@@ -69,7 +69,7 @@ trigger_time_in_event = 72000 * ns    # Check settings in caen1724.par
 
 
 
-# These gains and sigmas were measured by Julian Blanke in Aug 2015 with a green LED at room temperature
+# These gains and sigmas were measured by Julian Blanke in Aug 2015 with a green LED at room temperature.
 gains =
     [3123758.1521910313,
      2963517.4613321265,
