include some more fields like n_sat_channels

--- a/examples/muenster/MSTPC_Kr83m_gas_only.ini
+++ b/examples/muenster/MSTPC_Kr83m_gas_only.ini
@@ -304,9 +304,9 @@ fields_to_ignore = ['sum_waveforms',
                    'detector',
                    'n_reconstructed_positions',
                    'reconstructed_positions_start',
-                   'area_fraction_top',
+                   #'area_fraction_top',
                    'area_midpoint',
-                   'area_per_channel',
+                   #'area_per_channel',
                    'birthing_split_fraction',
                    'birthing_split_goodness',
                    'bottom_hitpattern_spread',
@@ -320,10 +320,10 @@ fields_to_ignore = ['sum_waveforms',
                    'mean_amplitude_to_noise',
                    #'n_hits',
                    'n_noise_pulses',
-                   'n_saturated_channels',
-                   'n_saturated_per_channel',
+                   #'n_saturated_channels',
+                   #'n_saturated_per_channel',
                    'n_saturated_samples',
-                   'range_area_decile',
+                   #'range_area_decile',
                    'right',
                    'sum_waveform',
                    'sum_waveform_top',
