Trying to apply base saturation fix

--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -101,6 +101,9 @@ height_over_min_low_threshold = 0
 # Raise low threshold temporarily to fraction of hit height for rest of pulse
 dynamic_low_threshold_coeff = 0.01
 
+# Base saturation threshold, just for S2 now
+base_sat_threshold = 9000
+
 
 
 [BuildPeaks.GapSizeClustering]
