Limit on how many base saturated channels are allowed to be passed through to patternfitter.

--- a/pax/config/XENON100.ini
+++ b/pax/config/XENON100.ini
@@ -152,11 +152,13 @@ base_penalties = {'33':  3,
                  }
 
 
-[BasicProperties.SumWaveformProperties]
+[BasicProperties]
 # Length of the peak sum waveform field.
 # Must be an even multiple of sample size, pax will add 1 sample width so there is a clear center.
 peak_waveform_length = 2.5 * us
 
+# Percentage of allowed number of channels being base saturated. Needs to be between 0 and 1
+allowed_saturation_percentage = 0.25
 
 
 [BuildInteractions.BuildInteractions]
