--- a/.travis.yml
+++ b/.travis.yml
@@ -67,12 +67,11 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a # Useful for debugging any issues with conda
-  - conda config --add channels http://conda.anaconda.org/NLeSC  
-  - conda create -q -n pax python=${PYTHON} root=${ROOT} numpy scipy=0.16 matplotlib pandas cython h5py numba pip python-snappy pytables scikit-learn rootpy psutil jupyter
+  - conda config --add channels http://conda.anaconda.org/NLeSC
+  - conda config --add channels http://conda.anaconda.org/XENON1T
+  - conda env create -n pax XENON1T/pax_head
+  - conda install -n pax python=${PYTHON} root=${ROOT} 
   - source activate pax
-  # tmp hack will be fixed
-  # - conda uninstall -q sqlite libpng libx11 
-  - pip install coveralls nose coverage
 
   # Install pax
   - python setup.py install
