--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
-  - conda install -q binstar conda conda-env
+  - conda install -q anaconda-client conda conda-env
   - conda info -a # Useful for debugging any issues with conda
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels http://conda.anaconda.org/XENON1T
