--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,8 @@ install:
   - conda info -a # Useful for debugging any issues with conda
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels http://conda.anaconda.org/XENON1T
-  - conda env create -n pax XENON1T/pax_head
-  - conda install -n pax python=${PYTHON} root=${ROOT} 
+  - conda env create -q -n pax XENON1T/pax_head
+  - conda install -q -n pax python=${PYTHON} root=${ROOT} 
   - source activate pax
 
   # Install pax
