--- a/.travis.yml
+++ b/.travis.yml
@@ -70,9 +70,10 @@ install:
   - conda config --add channels defaults
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels http://conda.anaconda.org/XENON1T
-  - conda env create -q -n pax XENON1T/pax_head
-  - conda install -q -n pax python=${PYTHON} root=${ROOT} 
-  - source activate pax
+  - conda env create -q -n pax_head XENON1T/pax_head
+  - source activate pax_head
+  - conda install -q python=${PYTHON} root=${ROOT} 
+  - source activate pax_head
 
   # Install pax
   - python setup.py install
