--- a/.travis.yml
+++ b/.travis.yml
@@ -70,8 +70,8 @@ install:
   - conda config --add channels defaults
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels http://conda.anaconda.org/XENON1T
-  - conda env create -n pax_head XENON1T/pax_head
-  - conda install -q -n pax_head python=${PYTHON} root=${ROOT} six psutil numexpr
+  - conda env create -n pax_head XENON1T/pax_head  # this is python3
+  - conda install -q -n pax_head python=${PYTHON} root=${ROOT} six psutil numexpr cython
   - source activate pax_head
 
   # Install pax
