--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,8 @@ install:
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels http://conda.anaconda.org/XENON1T
   - conda env create -n pax_head XENON1T/pax_head  # this is python3
-  - conda install -q -n pax_head python=${PYTHON} root=${ROOT} six psutil numexpr cython
+  - conda install -q -n pax_head python=${PYTHON} root=${ROOT}
+  - if [ "${PYTHON}" == 2.7 ]; then conda install six psutil numexpr cython h5py; fi
   - source activate pax_head
 
   # Install pax
