--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ install:
   - conda config --add channels http://conda.anaconda.org/XENON1T
   - conda env create -n pax_head XENON1T/pax_head  # this is python3
   - conda install -q -n pax_head python=${PYTHON} root=${ROOT}
-  - if [ "${PYTHON}" == 2.7 ]; then conda install six psutil numexpr cython h5py; fi
+  - if [ "${PYTHON}" == 2.7 ]; then conda install -n pax_head six psutil numexpr cython h5py; fi
   - source activate pax_head
 
   # Install pax
